--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="assets/site.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="buttonArea">
-                <button class='buttons' data-name="dog">dog</button>
+                <!-- <button class='buttons' data-name="dog">dog</button>
                 <button class='buttons' data-name="cat">cat</button>
                 <button class='buttons' data-name="mouse">mouse</button>
-                <button class='buttons' data-name="bird">bird</button>
+                <button class='buttons' data-name="bird">bird</button> -->
             </div>
         </div>
         <div class="row">
@@ -40,5 +39,7 @@
         </div>
     </div>
 </body>
+
+<script src="assets/site.js"></script>
 
 </html>
