--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://assets-cdn.ziggeo.com/v1-stable/ziggeo.css" />
+    <script src="https://assets-cdn.ziggeo.com/v1-stable/ziggeo.js"></script>
+    <script>ZiggeoApi.token = "35ddfcdb61cb69101828fe7ef30dd230";</script>
 </head>
 
 <body>
@@ -37,9 +41,38 @@
                 <img src="" alt="">
             </div>
         </div>
+        <div class="row">
+            <ziggeo ziggeo-limit=15
+                ziggeo-width=320
+                ziggeo-height=240>
+            </ziggeo>
+        </div>
     </div>
 </body>
 
 <script src="assets/site.js"></script>
+
+<!-- Alert when video finished recording -->
+<script>
+ZiggeoApi.Events.on("submitted", function (data) {
+    alert("The video with token " + data.video.token + " has been submitted!");
+});
+</script>
+
+<!-- Play videos code -->
+<script>
+    ZiggeoApi.Videos.source('')
+</script>
+
+<!-- Use Javascript on the client-side to dynamically display videos using e.g. JQuery. -->
+
+<script>
+    ZiggeoApi.Videos.index({}, {
+        success: function (args, videos) {
+            for (var i = 0; i < videos.length; ++i)
+                $("body").append("<ziggeo ziggeo-video='" + videos[i].token + "'></ziggeo>");
+        }
+    });
+</script>
 
 </html>
